--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 header {
   display: flex;
   justify-content: space-between;
-  padding: 20px;
+  /* padding: 20px; */
   margin: 20px 200px;
   align-items: center;
 }
@@ -34,4 +34,9 @@ header li {
   font-size: 20px;
   border: 0;
   padding: 15px 35px;
+}
+
+.banner {
+  margin: 0px 200px;
+  display: flex;
 }
